--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 404 page</title>
+  <title>URL shortener</title>
   <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'><link rel="stylesheet" href="style.css">
 
 </head>
