--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="box__description">
     <div class="box__description-container">
       <div class="box__description-title">Invalid URL!</div>
-      <div class="box__description-text">Add the issue number after the path /urls/[] /div>
+      <div class="box__description-text">Add the issue number after the path /urls/[] </div>
     </div>
     
     <a href="https://codepen.io/diogo_ml_gomes/" target="_blank" class="box__button">Go back</a>
