--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="box__description-text">Add the issue number after the path /urls/[] </div>
     </div>
     
-    <a href="https://codepen.io/diogo_ml_gomes/" target="_blank" class="box__button">Go back</a>
+    <a href="https://nxtexploit.com target="_blank" class="box__button">Go back</a>
     
   </div>
   
