--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        
       <div class="panel" id="main">
          <p style="font-size: 40px; padding-top: 10px; margin-bottom: 5px">Invalid URL!</p>
-         <p style="padding-bottom: 5px"><i>Please add the correct URL ID(issue number) after the path /urls/</i></p>
+         <p style="padding-bottom: 5px"><i>Please add the correct URL ID after the path /urls/</i></p>
          <div style="margin-top: 30px" class="interactive">
             <a href="/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">Go back Home</button></a>
             <a href="https://nxtexploit.com/blog/"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">Read blogs</button></a>
